bugfixes + added path
